0027696: Return max distance in xdistcs Draw command

Message about maximal distance is added for xdistcs command.